# codesearch

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
codesearch/: __main__.py  chunker.py  cli.py  config.py  duplicates.py  errors.py  formatter.py  indexer.py  lsh.py  mcp_server.py  scanner.py  searcher.py  storage.py
codesearch/embedding/: __init__.py  base.py  factory.py  ollama.py  onnx_direct.py  openai.py  openai_compatible.py  sentence_transformers.py
examples/codesearch-skill/: SKILL.md
tests/: test_chunker.py  test_cli.py  test_cli_duplicates.py  test_cli_index.py  test_cli_repo.py  test_cli_search.py  test_config.py  test_duplicates.py  test_e2e_cli.py  test_embedding_factory.py  test_formatter.py  test_indexer.py  test_lsh.py  test_mcp_server.py  test_ollama_provider.py  test_onnx_direct_provider.py  test_openai_provider.py  test_scanner.py  test_searcher.py  test_sentence_transformers_provider.py  test_storage.py  test_storage_lsh.py
